--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -40,6 +40,8 @@ dependencies {
         create group: 'org.junit.jupiter', name: name, version: '5.6.1'
     }
 
+    implementation 'com.github.javaparser:javaparser-core:3.24.4'
+
     testImplementation(junitJupiter("junit-jupiter-api"))
     testImplementation(junitJupiter("junit-jupiter-engine"))
     testImplementation(junitJupiter("junit-jupiter-params"))
